--- a/css/anime.css
+++ b/css/anime.css
@@ -1,5 +1,4 @@
 .wrapper{
-    font-family: 'Roboto', sans-serif;
     color: var(--color-text);
     display: grid;
     grid-template-columns: 1fr;
@@ -13,7 +12,7 @@
     display: flex;    
 }
 .subtitle{
-
+    font-family: 'Roboto', sans-serif;
     margin: auto;
 }
 .presentacion{
@@ -44,9 +43,42 @@
     background-color: var(--black-color);
     justify-content: center;
     box-shadow: 1px 1px 2px #fff;
-    font-weight: 5rem;
+    font-weight: 5rem;    
+}
+.black{
+    background-color: black;
+}
+.animes-container{
+    display: flex;
+    margin: 1rem auto 0 auto;
+    outline: 1px solid #fff;
     
 }
+.animes__item{
+    padding: 0 .5rem;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+.animes__item img{
+    width: 100%;
+    height: 10rem;
+    object-fit: fill;
+}
+.order{
+    order: 1;
+}
+.propaganda > div {
+    margin: 1rem auto 0 auto;
+    width: 98%;
+    height: 5rem;
+    border: 1px solid #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .signosis{
     grid-row: span 4;
 }
