--- a/css/reset.css
+++ b/css/reset.css
@@ -16,6 +16,7 @@ img{
     max-width: 100%;
 }
 a{
+    font-family: 'Montserrat', sans-serif;
     color: #fff;
     text-decoration: none;
 }
@@ -34,8 +35,11 @@ a{
 }
 h1{
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
-
+p{
+    font-family: 'Montserrat', sans-serif;
+}
 iframe{
     width: 100%;
     height: 15rem;   
